@startuml

package Game-Scene [[../../TestCases/BaseProject_Rider/Game.tscn]] {
    class Game  {
        [[../../Game/Game.cs ScriptFile]]
        [Provisions]
        [[../../Game/Game.cs:15 IGameRepo]] - [[../../TestCases/BaseProject_Rider/Domain/GameRepo.cs Script]]
        --
        [Properties]
        [[../../Game/Game.cs:23 AppBinding]]
        [[../../Game/Game.cs:22 GameLogic]] - [[../../TestCases/BaseProject_Rider/Logic/GameLogic.cs Script]]
        [[../../Game/Game.cs:21 GameRepo]] - [[../../TestCases/BaseProject_Rider/Domain/GameRepo.cs Script]]
        --
        [Methods]
        [[../../Game/Game.cs:29 _Notification()]]
        [[../../Game/Game.cs:47 OnExitTree()]]
        [[../../Game/Game.cs:40 OnResolved()]]
        [[../../Game/Game.cs:31 Setup()]]
    }
    class GameLogic  {
        [[../../TestCases/BaseProject_Rider/Logic/GameLogic.cs ScriptFile]]
        [Methods]
        [[../../TestCases/BaseProject_Rider/Logic/GameLogic.cs:12 GetInitialState()]]
    }
    class GameRepo  {
        [[../../TestCases/BaseProject_Rider/Domain/GameRepo.cs ScriptFile]]
        [Interface Properties]
        [[../../TestCases/BaseProject_Rider/Domain/GameRepo.cs:15 Instantiator]]
        --
        [Interface Methods]
        [[../../TestCases/BaseProject_Rider/Domain/GameRepo.cs:17 CreateInstantiator()]]
        [Methods]
        [[../../TestCases/BaseProject_Rider/Domain/GameRepo.cs:24 Dispose()]]
    }
    Game::GameLogic ---> GameLogic
    Game::GameRepo ---> GameRepo
}

@enduml